# ai-life-tracker

./: .env.example  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  HANDOVER.md  ROADMAP.md  TESTING_GUIDELINES.md  VISION.md  docker-compose.yml  opencode.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 44333bd5c5d5_initial.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: __init__.py  entry.py  routine.py  tracker.py  user.py
backend/app/routers/: chat.py  trackers.py
backend/app/schemas/: chat.py  tracker.py
backend/app/services/: ai.py  context.py  entry.py  routine.py  user.py
backend/tests/: conftest.py  test_context_engine.py  test_entry_service.py  test_routine_service.py  test_tracker_router.py
frontend/: .env.example  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts  trackers.ts
frontend/src/components/auth/: AuthGuard.tsx
frontend/src/components/error/: ErrorBoundary.test.tsx  ErrorBoundary.tsx
frontend/src/components/generative/: ChatMessage.tsx  Confirmation.tsx  List.tsx  RoutineCard.tsx  StatCard.tsx  index.ts
frontend/src/components/trackers/: TrackerCard.tsx  TrackerForm.tsx
frontend/src/components/ui/: card.tsx
frontend/src/hooks/: useVoice.ts
frontend/src/routes/: __root.tsx  index.tsx  trackers.tsx
frontend/src/stores/: workoutStore.ts
frontend/src/test/: pwa.test.ts  setup.ts
(+1 files in other folders)
